[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/assets/Items/Bubble.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/Bubble.gd" type="Script" id=2]
[ext_resource path="res://src/assets/SFX/bubbles.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 13.3408

[node name="Bubble" type="RigidBody2D"]
collision_layer = 4
collision_mask = 10
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="BubbleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Bubble_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
